<resources>
    <string name="app_name" translatable="false">TecGurusAppIntro</string>
    <string name="text_prueba">Boton Segundo de prueba</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="text_invalid_number">Número invalido</string>
    <string name="text_result">Resultado: %s</string>
    <string name="text_accept">Aceptar</string>
    <string name="operation_success">Operacion realizada con exito.</string>
    <string name="suma">Suma</string>
    <string name="multiplicacion">Multiplicacion</string>
    <string name="operator_one_text">Operador uno</string>
    <string name="operator_two_text">Operador dos</string>
    <string name="text_rest">Resta</string>
    <string name="text_div">Divicion</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="invalid_user">Usuario invalido</string>
    <string name="invalid_password">Password incorrecto</string>
    <string name="prompt_password">Password</string>

    <string name="custom_toast_text">Custom Toast</string>
    <string name="normal_toast_text">Normal Toast</string>

    <string name="welcome">Bienvenido</string>
    <string name="tec_gurus">Tec Gurus</string>
    <string name="airplane_mode_changed">El modo avion cambio&#8230;</string>
    <string name="charger_connected">Cargador conectado&#8230;</string>
    <string name="open">Abrir</string>

    <string name="broadcats_name">com.example.ja.tecgurusappintro.notification</string>

    <string name="id_channel_notification">id_channel_notification</string>
    <string name="name_channel_notification">Notificaciones Tec Gurus</string>
</resources>
