<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".activities.main.MainActivity">

    <EditText
        android:hint="@string/operator_one_text"
        android:id="@+id/activity_main_operator_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <EditText
        android:hint="@string/operator_two_text"
        android:id="@+id/activity_main_operator_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:id="@+id/activity_main_sum"
            android:text="@string/suma"
            android:layout_marginEnd="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp" />

        <Button
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:id="@+id/activity_main_mult"
            android:text="@string/multiplicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:id="@+id/activity_main_rest"
            android:text="@string/text_rest"
            android:layout_marginEnd="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp" />

        <Button
            style="@style/ButtonStyle"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:id="@+id/activity_main_div"
            android:text="@string/text_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp" />

    </LinearLayout>

</LinearLayout>