<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.login.LoginActivity">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_login_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:id="@+id/activity_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:drawableStart="@drawable/ic_account_circle_black_24dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activity_login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:drawablePadding="8dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:id="@+id/activity_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:drawableStart="@drawable/ic_lock_black_24dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/activity_login_login_button"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_activity_login"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>